441086 As an app developer, I want to get full details of a given User by the User's email address to show up in my app.
implemented getting user by Email, through new endpoint "auth"
