# backend-api/controllers/UsersController.js
@@ -58,19 +58,52 @@ async (req,res) => {
 }
 exports.getByID =
 async (req,res) => {
-    const user = await getUser(req, res);
+    // console.log("wrongpath")
+    const user = await getUser(req, res,"ID");
     if (!user) {return};
     return res.send(user);
 }
 
+exports.getByEmail = 
+async (req, res) => {
+    // console.log("correctpath")
+    
+    const user = await getUser(req, res,"Email");
+    if (!user) {return};
+    return res.send(user);
+}
 
 const getUser =
-async (req,res) => {
-    const userID = req.params.UserID;
-    const user = await db.users.findByPk(userID);
-    if (!user) {
-        res.status(404).send({error:`user by this id does not exist${userID}`})
+async (req,res,gtype) => {
+    console.log(req.params)
+    var user = null;
+    var errorReason = "";
+    var errorData = ""
+    console.log(gtype)
+    if(!req.params.LoginEmail){
+        
+        res.status(400).send({error:`Missing LoginEmail`})
         return null;
     }
-    return user;
+    switch(gtype){
+        case "ID":
+            const userID = req.params.UserID;
+            user = await db.users.findByPk(userID);            
+            errorReason="ID";
+            errorData=userID
+            return user;
+        case "Email":
+            const LoginEmail = req.params.LoginEmail;
+            console.log(LoginEmail);
+            user = await db.users.findOne({where: {EmailAddress: LoginEmail}})         
+            errorReason="Email"
+            errorData=LoginEmail     
+            return user;
+            
+    }
+    if (!user) {
+            res.status(404).send({error:`user by this ${errorReason} does not exist${errorData}`})
+            return null;
+        }  
+    
 }
